# WorldFork

./: .dockerignore  .env.example  .gitignore  CLEANUP_ASSESSMENT_TYPES.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  findings.md  pyproject.toml  vercel.json
.claude/: settings.json
.github/workflows/: tests.yml
apps/web/: README.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
apps/web/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
apps/web/components/: providers.tsx
apps/web/lib/: keyboard.ts  utils.ts
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: integrations.py  jobs.py  logs.py  multiverse.py  pubsub.py  runs.py  settings.py  simulation.py  universes.py  websockets.py  websockets_publishers.py
backend/app/branching/: __init__.py  bootstrap.py  branch_engine.py  branch_policy.py  delta.py  divergence.py  god_agent.py  lineage.py  lineage_helpers.py  namespacing.py  prune.py
backend/scripts/: belief_integration.py  run_parallel_simulation.py  run_reddit_simulation.py  run_twitter_simulation.py
backend/tests/: COVERAGE.md  conftest.py  test_smoke.py
deploy/: DEPLOY.md  cloudflared-config.example.yml  launch.sh  stop.sh  worldfork.service
docs/: multi_fork.md
frontend/: package-lock.json
infra/: alembic.ini
infra/alembic/: env.py
infra/docker/: api.Dockerfile  web.Dockerfile  worker.Dockerfile
infra/redis/: redis.conf
prd-do-not-delete/: manifest.json  prd.md
public/: index.html
public/data/: runs.json
public/static/: api.js  app.jsx  graph.jsx  pages.jsx  tree.jsx
samples/: ftx_collapse_scenario.yaml  ftx_collapse_seed.txt  godagent_v06_scenario.yaml  godagent_v07_scenario.yaml  nsb_branching_scenario.yaml  nsb_smoke_perturbations.json  nsb_smoke_seed.txt  nsb_test_schema.yaml  usdc_depeg_perturbations.json  usdc_depeg_scenario.yaml  usdc_depeg_seed.txt  usdc_extreme_perturbations.json  usdc_n4_perturbations.json  usdc_roadb_perturbations.json
scripts/: live_initializer.py  run_tests.sh  smoke_live.py
source_of_truth/: actor_types.json  behavior_axes.json  channel_types.json  emotions.json  event_types.json  expression_scale.json  ideology_axes.json  issue_stance_axes.json  social_action_tools.json  sociology_parameters.json
source_of_truth/prompt_contracts/: cohort_decision_schema.json  god_review_schema.json  hero_decision_schema.json  initializer_schema.json
source_of_truth/prompt_templates/: cohort_tick.md  god_review.md  hero_tick.md  initializer.md
worldfork/: __init__.py  aggregator.py  analysis_page.py  bootstrap.py  charting.py  classifier.py  live_state.py  live_tree.py  mood_perturbator.py  orchestrator.py  per_round_extractor.py  perturbation_generator.py  server.py  tree_renderer_legacy.py
worldfork/tests/: layer2_synthetic.py  test_imports.py
worldfork/ui/: server.py
(+517 files in other folders)
