[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldfork-backend"
version = "0.1.0"
description = "WorldFork — recursively branching social simulation platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0.32",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "celery[redis]>=5.4",
    "openai>=1.51",
    "httpx>=0.27",
    "orjson>=3.10",
    "jsonschema>=4.23",
    "jinja2>=3.1",
    "networkx>=3.3",
    "numpy>=2.0",
    "prometheus-client>=0.20",
    "structlog>=24.4",
    "python-multipart",
    "passlib[bcrypt]",
    "anyio>=4.4",
    "python-ulid>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "pytest-xdist",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis",
    "freezegun",
    "httpx",
    "faker",
    "fakeredis[lua]>=2.24",
    "respx>=0.21",
    "aiosqlite>=0.20",
]

zep = [
    "zep-cloud>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]  # line-length enforced by formatter; long strings/decorators are unavoidable

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend/tests"]
# Marker definitions — keep alphabetised. CI hint: run unit + integration
# first; then e2e (slower, exercises the full ASGI stack); then any live_*
# tests opt-in via `-m live_openrouter` / `-m live_zep`.
markers = [
    "e2e: marks end-to-end tests that exercise the full ASGI app (deselect with '-m \"not e2e\"')",
    "live_openrouter: marks tests that hit live OpenRouter API (deselect with '-m \"not live_openrouter\"')",
    "live_zep: marks tests that hit live Zep Cloud API (deselect with '-m \"not live_zep\"')",
    "requires_broker: marks tests that need a running Celery broker (skip cleanly if absent)",
    "requires_redis: marks tests that need a reachable Redis (skip cleanly if absent)",
    "slow: marks tests that take >5s (deselect with '-m \"not slow\"')",
]
