[project]
name = "worldfork"
version = "0.5.0"
description = "Ensemble forecast via state-forked agent simulations on top of MiroShark"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
dependencies = [
    "flask>=3.0",
    "httpx>=0.27",
    "openai>=1.50",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worldfork"]
